fixed wrap up bugs

--- a/client/main.scss
+++ b/client/main.scss
@@ -562,6 +562,7 @@ body {
 .modalContent {
     width: 100%;
     height: 200px;
+    padding: 20px;
     padding-top: 25px;
     border-radius: 0px 0px 15px 15px;
     border-top: 3px solid white;
